Remove inline js for Google Content Security Policy

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <form>
                 <textarea id="text-input" class="input-box" rows="7" cols="40"></textarea>
             </form>
-            <button onclick="outputOfInput('text-input')" class="submit-button">Submit</button>
+            <button id="submitButton" class="submit-button">Submit</button>
+            <script src="index.js"></script>
         </div>
         <div class="outputDiv">
             <p>Output:</p>
