Create tooltip for info button

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <body>
         <div class="headDiv">
             <div class="header"><h1>Conversate</h1></div>
-            <div class="header"></div><button class="info-button"><b>i</b></button></div>
-            <img src="img\Conversate Gorilla.svg" alt="Gorilla and speach bubble 'C'" width="200px">
+            <div class="header"></div><button class="info-button"><b>i</b></button>
+            <div class="tool-tip">This will be information about how the program works</div>
         </div>
+        <img src="img\Conversate Gorilla.svg" alt="Gorilla and speach bubble 'C'" width="200px">
         <div class="inputDiv">
             <label for="text-input">Input text here:</label>
             <form>
