js ajax to run python, css fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css\styles.css">
         <script src="scripts.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="headDiv">
