--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Conversate</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css\styles.css">
+        <link rel="icon" href="img\128-icon.PNG">
         <script src="index.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
     </head>
